--- a/package.json
+++ b/package.json
@@ -14,19 +14,26 @@
     "@babel/preset-react": "^7.22.5",
     "@rollup/plugin-commonjs": "^25.0.2",
     "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.1",
+    "@types/react": "^18.2.14",
     "babel-loader": "^9.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^3.25.1",
-    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2"
+    "tslib": "^2.5.3",
+    "typescript": "^5.1.3"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.2.0"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.es.js"
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts"
 }
